# Stashify

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  dump.sql  pgadmin_entrypoint.sh  pyproject.toml
app/: constants.py  main.py
app/application/containers/: factories.py
app/application/exceptions/: category_item.py  quiz_item.py  quiz_question.py  resource_item.py  user_account.py
app/application/filters/: user_role_filter.py  valid_callback_filter.py
app/application/filters_schemas/: base.py  category_item.py  quiz_question.py  resource_favorite.py  resource_image.py  resource_item.py
app/application/formaters/: resource_item.py
app/application/formatters/: base.py  resource_item.py
app/application/keyboards/: base.py  categories.py  category.py  favorite.py  manage_quizes.py  manage_resources.py  menu.py  quizes.py  resource_quizes.py  resources.py  search_resource.py  users.py
app/application/middlewares/: create_user.py  delete_message.py  pass_user_role.py
app/application/routers/: common.py  constants.py  manage_categories.py  manage_quizes.py  manage_resources.py  manage_users.py  menu.py  resources.py  search_resource.py
app/application/schemas/: base_schema.py  category_item_schema.py  quiz_item_schema.py  quiz_option_schema.py  quiz_question_schema.py  quiz_rating_schema.py  quiz_result_schema.py  quiz_schema.py  resource_favorite_schema.py  resource_image_schema.py  resource_item_schema.py  resource_rating_schema.py  resource_schema.py  user_account_schema.py  user_schema.py
app/application/services/: base.py  category_item.py  quiz_item.py  quiz_option.py  quiz_question.py  quiz_rating.py  quiz_result.py  resource_favorite.py  resource_image.py  resource_item.py  resource_rating.py  user_account.py
app/containers/: factories.py  providers.py
app/containers/providers/: common.py  repositories.py  services.py
app/database/: init.py  orm.py
app/database/managers/: BaseManager.py  CategoryManager.py  FavoriteManager.py  QuizManager.py  QuizQuestionManager.py  QuizResultManager.py  ResourceImageManager.py  ResourceManager.py  ResourceRatingManager.py  UserManager.py  __init__.py
app/database/models/: __init__.py  category.py  favorite.py  quiz.py  quiz_question.py  quiz_rating.py  quiz_result.py  resource.py  resource_image.py  resource_item.py  resource_rating.py  user.py
app/domain/: enums.py
app/domain/entities/: base.py  category_item.py  quiz_item.py  quiz_option.py  quiz_question.py  quiz_rating.py  quiz_result.py  resource_favorite.py  resource_image.py  resource_item.py  resource_rating.py  user_account.py
app/domain/exceptions/: base.py
app/domain/filters/: base.py  category_item.py  quiz_item.py  quiz_option.py  quiz_question.py  quiz_rating.py  quiz_result.py  resource_favorite.py  resource_image.py  resource_item.py  resource_rating.py  user_account.py
app/domain/repositories/: base.py  category_item.py  quiz_item.py  quiz_option.py  quiz_question.py  quiz_rating.py  quiz_result.py  resource_favorite.py  resource_image.py  resource_item.py  resource_rating.py  user_account.py
app/filters/: user_role_filter.py
app/formaters/: base.py  resource_item.py
app/handlers/: base_resource_router.py
app/i18n/: __init__.py  translate.py  translations.py
app/infrastructure/mappers/: base.py  category_item.py  quiz_item.py  quiz_option.py  quiz_question.py  quiz_rating.py  quiz_result.py  resource_favorite.py  resource_image.py  resource_item.py  resource_rating.py  user_account.py
app/infrastructure/models/: __init__.py  category.py  category_item.py  favorite.py  quiz.py  quiz_item.py  quiz_option.py  quiz_question.py  quiz_rating.py  quiz_result.py  resource_favorite.py  resource_image.py  resource_item.py  resource_rating.py  user.py  user_account.py
app/infrastructure/repositories/: base.py
app/keyboards/: base.py  categories.py  main_menu_keyboard.py  manage_users.py  manage_users_keyboard.py  menu.py  quizes.py  resource_quizes.py  resources.py  search_resource.py  users.py
app/keyboards/list_favorites/: category_list_keyboard.py  list_favorites_category_list_keyboard.py  list_favorites_resource_item_keyboard.py  resource_item_keyboard.py  resource_list_keyboard.py
app/keyboards/list_resources/: list_resources_back_keyboard.py  list_resources_category_list_keyboard.py  list_resources_quiz_final_keyboard.py  list_resources_quiz_question_keyboard.py  list_resources_resource_item_keyboard.py  list_resources_resource_list_keyboard.py  (+1 more)
app/routers/: common.py  constants.py  manage_users.py  menu.py
app/schemas/: category_item_schema.py  category_schema.py  favorite_schema.py  quiz_question_schema.py  quiz_rating_schema.py  quiz_result_schema.py  quiz_schema.py  resource_favorite_schema.py  resource_image_schema.py  resource_rating_schema.py  resource_schema.py  user_schema.py
app/settings/: aiogram.py  config.py
app/utils/: OptionalSchema.py  format_resource_text.py
docker_compose/: app.yaml  storages.yaml
docs/: naming.md
tgbot/: .env.example  alembic.ini  main.py  requirements.txt
tgbot/config/: bot_config.py  database_config.py  var_config.py
tgbot/database/: orm.py
tgbot/filters/: user_role_filter.py
tgbot/i18n/: __init__.py  translate.py  translations.py
tgbot/keyboards/: main_menu_keyboard.py  manage_categories_edit_keyboard.py  manage_categories_keyboard.py  manage_resources_create_keyboard.py  manage_resources_delete_keyboard.py  manage_resources_delete_keyboard_confirm.py  manage_resources_edit_keyboard.py  manage_resources_edit_resources_keyboard.py  manage_resources_resources_keyboard.py  manage_users_keyboard.py
tgbot/routers/: common.py  manage_categories.py  manage_quizes.py  manage_resources.py  manage_users.py  menu.py
tgbot/schemas/: category_schema.py  favorite_schema.py  quiz_question_schema.py  quiz_rating_schema.py  quiz_result_schema.py  quiz_schema.py  resource_image_schema.py  resource_rating_schema.py  resource_schema.py  user_schema.py
tgbot/utils/: OptionalSchema.py  format_resource_text.py
(+198 files in other folders)
