[project]
name = "stashify"
version = "0.1.0"
description = ""
authors = [
    {name = "Robun Gid",email = "robungidorig@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "aiogram (>=3.28.2,<4.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aiogram-media-group (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
